Switch to jUnit 5 ("jupiter")